--- a/Frontend/Website/Vote-Vault-Website/src/app/history-page/history-page.component.css
+++ b/Frontend/Website/Vote-Vault-Website/src/app/history-page/history-page.component.css
@@ -7,14 +7,19 @@ td{
 height: 55%;
 }
 
-
 body {
   height: 100%;
 }
 
+#borgir{
+  visibility: hidden;
+}
 @media only screen and (max-width: 645px)  {
   #links{
     visibility: hidden;
+  }
+  #borgir{
+    visibility: visible;
   }
 }
 /* BURGER */
