--- a/Frontend/Website/Vote-Vault-Website/src/app/home-page/home-page.component.css
+++ b/Frontend/Website/Vote-Vault-Website/src/app/home-page/home-page.component.css
@@ -77,6 +77,10 @@ body {
   flex-direction: column;
 }
 
+#borgir{
+  visibility: hidden;
+}
+
 @media only screen and (max-width: 900px) {
   #context{
     text-align: left;
@@ -92,6 +96,10 @@ body {
 @media only screen and (max-width: 645px) {
   #links {
     visibility: hidden;
+  }
+
+  #borgir{
+    visibility: visible;
   }
 
   #homeText {
