--- a/Frontend/Website/Vote-Vault-Website/src/app/predictions-page/predictions-page.component.css
+++ b/Frontend/Website/Vote-Vault-Website/src/app/predictions-page/predictions-page.component.css
@@ -23,7 +23,9 @@ body {
   z-index: -1;
 }
 
-
+#borgir{
+  visibility: hidden;
+}
 
 @media only screen and (max-width: 900px) {
   #context > h3 {
@@ -68,6 +70,9 @@ body {
 @media only screen and (max-width: 645px)  {
   #links{
     visibility: hidden;
+  }
+  #borgir{
+    visibility: visible;
   }
 }
 /* BURGER */
